SERVER-56158 Add resharding::WithAutomaticRetry() util around AsyncTry.

Replaces direct usages of AsyncTry in ReshardingCollectionCloner,
ReshardingTxnCloner, and ReshardingOplogBatchApplier.